Settler.ini: Fix the path format for the death sound (#467)
Prior to this the game would freeze, and the console would show errors
like `System.ApplicationException: Media path not found:
Art/Units/Settler/..\Worker\WorkerDeath.wav`.

--- a/C7/Art/Units/Settler/Settler.ini
+++ b/C7/Art/Units/Settler/Settler.ini
@@ -71,7 +71,7 @@ ATTACK1=
 ATTACK2=
 ATTACK3=
 DEFEND=
-DEATH=..\Worker\WorkerDeath.wav
+DEATH=../Worker/WorkerDeath.wav
 DEAD=
 FORTIFY=
 FORTIFYHOLD=
