--- a/.github/workflows/export-c7.yml
+++ b/.github/workflows/export-c7.yml
@@ -17,6 +17,15 @@ on:
         type: boolean
         description: Append ISO8601 date/time to folder name
         default: true
+  pull_request:
+    branches:
+    - 'Development'
+    # Add any long-lived branches that need CI here.
+  push:
+    branches:
+    - 'Development'
+    # Add any long-lived branches that need CI here.
+
 
 env:
   GODOT_VERSION: 4.2.2
