--- a/.github/workflows/export-c7.yml
+++ b/.github/workflows/export-c7.yml
@@ -48,6 +48,9 @@ jobs:
         cd ${EXPORT_NAME}
         dotnet build
         godot -v --headless --export${BUILD_SUFFIX} "Windows Desktop" ../build/${FOLDER_NAME}/${EXPORT_NAME}.exe
+    - name: Run tests
+      run: |
+        dotnet test C7
     - name: Copy Static Files
       run: |
         if cp -r ${EXPORT_NAME}/Text build/${FOLDER_NAME}/Text && cp -r ${EXPORT_NAME}/Art build/${FOLDER_NAME}/Art
@@ -78,6 +81,9 @@ jobs:
         cd ${EXPORT_NAME}
         dotnet build
         godot -v --headless --export${BUILD_SUFFIX} "Linux/X11" ../build/${FOLDER_NAME}/${EXPORT_NAME}.x86_64
+    - name: Run tests
+      run: |
+        dotnet test C7
     - name: Copy Static Files
       run: |
         if cp -r ${EXPORT_NAME}/Text build/${FOLDER_NAME}/Text && cp -r ${EXPORT_NAME}/Art build/${FOLDER_NAME}/Art
@@ -111,6 +117,9 @@ jobs:
         cd ${EXPORT_NAME}
         dotnet build
         godot -v --headless --export${BUILD_SUFFIX} "macOS" ../build/${FOLDER_NAME}.zip
+    - name: Run tests
+      run: |
+        dotnet test C7
     - name: Copy Static Files
       run: |
         cd ${EXPORT_NAME}
